// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StructuredText with no value renders null 1`] = `
<body>
  <div>
    <pre>
      No data document
    </pre>
    
  </div>
</body>
`;

exports[`simple dast /2 with default rules renders the document 1`] = `
<body>
  <div>
    <div>
      <h2>
        This
is a 
        
        
        
        
        <strong>
          title
          
           
        </strong>
        
        
        
        
        
        
        
      </h2>
      
      
      
      
      
      
    </div>
    
    
    
  </div>
</body>
`;

exports[`simple dast with no links/blocks with default rules renders the document 1`] = `
<body>
  <div>
    <div>
      <h1>
        This
is a 
        
        
        
        
        <strong>
          title
          
           
        </strong>
        
        
        
        
        
        
        
      </h1>
      
      
      
      
      
      
    </div>
    
    
    
  </div>
</body>
`;

exports[`with links/blocks with default rules renders the document 1`] = `
<body>
  <div>
    <div>
      <h1>
        This is a
        
        
        
        
        <mark>
          title
          
           
        </mark>
        
        
        
        
        
        
        <div>
          No component to render inlineLink DocPageRecord of ID: 123
        </div>
        
        
        <div>
          No component to render inlineLink DocPageRecord of ID: 123
        </div>
        
        
        
        
      </h1>
      
      
      
      
      
      <p>
        <a
          href="http://www.datocms.com"
          rel="nofollow"
          target="_blank"
        >
          Empty link
          
          
          
          
          
        </a>
        
        
        
        
        
      </p>
      
      
      
      
      <div>
        No component to render QuoteRecord of ID: 456
      </div>
      
      
      
    </div>
    
    
    
  </div>
</body>
`;
